# Anki-my-backend

./: Cargo.toml  README.md  Rocket.toml
src/: db.rs  main.rs
src/models/: mod.rs
src/utils/: mod.rs
