[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
rocket_cors = "0.6"
bcrypt = "0.17"                                                        # or latest available

[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = ["v4"]
